# pythonhardmode

./: pyproject.toml
src/pythonhardmode.egg-info/: PKG-INFO
